Refactor index.html for Valentine proposal layout
Updated stylesheet link and restructured the proposal card with additional content and buttons.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will You Be My Valentine?</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="hearts-background">
+        <div class="heart"></div>
+        <div class="heart"></div>
+        <div class="heart"></div>
+        <div class="heart"></div>
+        <div class="heart"></div>
+    </div>
     <div class="container">
-        <h1>Will you be my Valentine?</h1>
-        <div class="buttons">
-            <button class="yes-button" onclick="handleYesClick()">Yes</button>
-            <button class="no-button" onclick="handleNoClick()">No</button>
-        </div>
-        <div class="gif-container">  <!-- corrected class name -->
-            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif" alt="Cute GIF">
+        <div class="proposal-card">
+            <h1 class="main-title">Will you be my Valentine?</h1>
+            <p class="subtitle">Let's make this Valentine's Day special 💕</p>
+            <div class="gif_container">
+                <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdmZzOGQ1bjBpZTB2Z3NudzVxaWM1emJ6c2p6emZ3czljMHprYnBkYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Zl7u48zLVFgLpRwq6f/giphy.gif" alt="Cute GIF">
+            </div>
+            <div class="buttons">
+                <button class="yes-button" onclick="handleYesClick()">Yes! 💕</button>
+                <button class="no-button" onclick="handleNoClick()">No</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
