--- a/yes_page.html
+++ b/yes_page.html
@@ -7,11 +7,29 @@
     <link rel="stylesheet" href="./yes_style.css">
 </head>
 <body>
+    <div class="celebration-container">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+    </div>
     <div class="container">
-        <h1 class="header_text">Knew you would say yes!</h1>
-        <div class="gif_container">
-            <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmo3c3l5ODh3ZGN6NHhhaDE2Mjg1ZjkwOXczdDFxbWM3dTBtaW9zaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/9XY4f3FgFTT4QlaYqa/giphy.gif">
+        <div class="success-card">
+            <h1 class="header_text">✨ Knew you would say yes! ✨</h1>
+            <p class="celebration-text">You just made me the happiest! 💕</p>
+            <div class="gif_container">
+                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDV6b3F4aHY1am11Nm42cDRkMzd6dndyNzY2cnBtMjE4ejN4OGRwcyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/ytu2GUYbvhz7zShGwS/giphy.gif" alt="Celebration">
+            </div>
+            <div class="hearts-container">
+                <span class="animated-heart">❤️</span>
+                <span class="animated-heart">💕</span>
+                <span class="animated-heart">💖</span>
+                <span class="animated-heart">💗</span>
+                <span class="animated-heart">💓</span>
+            </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
