--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will You Be My Valentine Kushu babyy?</title>
+    <title>Will You Be My Valentine?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     </div>
     <div class="container">
         <div class="proposal-card">
-            <h1 class="main-title">Will you be my Valentine?</h1>
+            <h1 class="main-title">Will you be my Valentine Kushu babyy?</h1>
             <p class="subtitle">Let's make this Valentine's Day special 💕</p>
             <div class="gif_container">
                 <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExdmZzOGQ1bjBpZTB2Z3NudzVxaWM1emJ6c2p6emZ3czljMHprYnBkYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Zl7u48zLVFgLpRwq6f/giphy.gif" alt="Cute GIF">
